--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Personal webpage of Hassan Arbabi">
+    <meta name="keywords" content="Hassan Arbabi, data science, machine learning, artificial intelligence, insurance technology" />
+    <meta name="author" content="Hassan Arbabi" />
+    <title>Hassan's homepage</title>
+    <!-- Bootstrap 3.7 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Source+Sans+Pro" rel="stylesheet">
+     <!-- personal adjustments -->
+    <link rel="stylesheet" href="BSAdjust_HA.css">
+  </head>
+  <body>
+    <!-- Website NAVBAR -->
+    <nav class="navbar navbar-dark navbar-expand-sm" style="background-color: #2D3A4F;">
+      <div class="container">
+
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon disabled"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav mr-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="Research.html">Research</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="CV_hassan.pdf">CV</a>
+          </li> -->
+        </ul>
+
+        <ul class="nav navbar-right">
+          <!-- <li class="nav-item">
+              <a class="nav-link" href="http://sandlab.mit.edu/">Sandlab@MIT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://accessibility.mit.edu">Accessibility</a>
+          </li> -->
+        </ul>
+
+      </div>
+     </div>
+    </nav>
+    <!-- End Navbar -->
+
+ <!-- Bigraphy and the gadfly photo -->
+ <div class="container">
+   <div style="background:#e0e2e3 !important" class="jumbotron">
+     <div class="row">
+
+       <div class="col-md-6">
+         <!-- <img src="Cafe.JPG" class="img-thumbnail" alt="Cinque Terre" width="326" height="244"> -->
+       <figure class="figure">
+         <img src="./pics/whitney.png" class="figure-img img-fluid img-thumbnail" alt="At Grand Teton">
+         <figcaption class="figure-caption"></figcaption>
+       </figure>
+     </div>
+
+         <!-- <hr class="my-4"> -->
+       <div class="col-md-6">
+
+         <p style="text-align: justify">I am a Data Scientist & Manager at <a class="" href="https://www.cccis.com/"> CCC Intelligent Solutions</a> in charge of building AI pipelines for automated processing of insurance claims. Right before this, I worked at Safekeep, a fintech startup focused on automation of claim subrogation, which was acquired by my current employer. Before that, I was a researcher in the field of applied math with special interest in time-series analysis and fluid mechanics. And before all of that, I got a PhD in Mechanical Engineering from UC Santa Barbara. </p>
+
+
+        <!-- Hassan Arbabi -->
+        <!-- <br> -->
+        <em>xx@gmail.com with xx=arbabiha</em>
+
+
+        <!-- <br>
+        77 Massachusetts Avenue, 5-423
+        <br>
+        Cambridge, MA 02139 -->
+        <br>
+        <a href="https://github.com/arbabiha">
+            <img src="./pics/GitHub-Mark-64px.png" alt="megit" style="width:34px;height:34px;border:0;">
+        </a>
+        <a href="https://scholar.google.com/citations?user=XV9KXn4AAAAJ&hl=en">
+            <img src="./pics/gslogo.png" alt="megit" style="width:48px;height:48px;border:0;">
+        </a>
+        <br>
+        <!-- <a class="inline_link2" href="https://github.com/arbabiha">Github</a>, <a class="inline_link2" href="https://scholar.google.com/citations?user=XV9KXn4AAAAJ&hl=en">Google Scholar</a>, <a class="inline_link2" href="https://www.researchgate.net/profile/Hassan_Arbabi">ResearchGate</a> -->
+       </p>
+
+
+       </div>
+
+     </div>
+   </div>
+ </div>
+
+
+
+
+
+
+
+
+<!-- Jquery and Java scripts -->
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  </body>
+</html>
